--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:migrate": "ts-node --project script/tsconfig.script.json script/migrate.ts",
+    "db:seed": "ts-node --project script/tsconfig.script.json script/seed.ts"
   },
   "dependencies": {
+    "dotenv": "^17.2.0",
     "mysql2": "^3.14.2",
     "next": "15.4.3",
     "react": "19.1.0",
@@ -21,6 +24,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
